include/dss_capi.h

    DSS_CAPI_DLL void CktElement_Get_AllVariableNames(char*** ResultPtr, int32_t* ResultCount);
    DSS_CAPI_DLL void CktElement_Get_AllVariableValues(double** ResultPtr, int32_t* ResultCount);
    DSS_CAPI_DLL double CktElement_Get_Variable(char* MyVarName, int32_t Code);
    DSS_CAPI_DLL double CktElement_Get_Variablei(int32_t Idx, int32_t Code);
    DSS_CAPI_DLL void CktElement_Get_NodeOrder(int32_t** ResultPtr, int32_t* ResultCount);
    DSS_CAPI_DLL uint16_t CktElement_Get_HasOCPDevice(void);
    DSS_CAPI_DLL int32_t CktElement_Get_NumControls(void);
    DSS_CAPI_DLL int32_t CktElement_Get_OCPDevIndex(void);
    DSS_CAPI_DLL int32_t CktElement_Get_OCPDevType(void);
    DSS_CAPI_DLL void CktElement_Get_CurrentsMagAng(double** ResultPtr, int32_t* ResultCount);
    DSS_CAPI_DLL void CktElement_Get_VoltagesMagAng(double** ResultPtr, int32_t* ResultCount);