src/CAPI_CktElement.pas


Begin

  IF   ActiveCircuit <> Nil THEN
   WITH ActiveCircuit DO
   Begin
     If ActiveCktElement <> Nil THEN
     WITH ActiveCktElement DO
     If Enabled Then
     Begin
         TRY
            Result := DSS_CreateArray_PDouble(ResultPtr, ResultCount, (2*3*NTerms-1) + 1);

            i012 := Allocmem(Sizeof(i012^[1]) * 3 * Nterms);
            // get complex seq voltages
            CalcSeqCurrents(ActiveCktElement, i012);
            // return 0 based array
            iV := 0;
            For i := 1 to 3*Nterms do Begin
                Result[iV] := i012^[i].re;
                inc(iV);
                Result[iV] := i012^[i].im;
                inc(iV);
            End;

            Reallocmem(i012, 0);  // throw away temp memory

          EXCEPT
             On E:Exception Do
             Begin
                S:= E.message + CRLF +
                    'Element='+ ActiveCktElement.Name + CRLF+
                    'Nphases=' + IntToStr(Nphases) + CRLF +
                    'NTerms=' + IntToStr(NTerms) + CRLF +
                    'NConds =' + IntToStr(NConds);
                DoSimpleMsg(S, 5012);
              End;
          END;
     End
     Else
         Result := DSS_CreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);  // Disabled

   End
  ELSE Result := DSS_CreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);


end;
//------------------------------------------------------------------------------
PROCEDURE CktElement_Get_AllVariableNames(var ResultPtr: PPAnsiChar; var ResultCount: Integer);cdecl;
VAR
  Result: PPAnsiCharArray;
   k:Integer;
   pPCElem :TPCElement;

begin

  Result := DSS_CreateArray_PPAnsiChar(ResultPtr, ResultCount, (0) + 1);
  IF ActiveCircuit <> Nil THEN
   WITH ActiveCircuit DO
   Begin
     If ActiveCktElement<>Nil THEN
     WITH ActiveCktElement DO
     Begin

         If (DSSObjType And BASECLASSMASK) = PC_ELEMENT Then
          Begin
              pPCElem := (ActiveCktElement as TPCElement);
              Result := DSS_CreateArray_PPAnsiChar(ResultPtr, ResultCount, (pPCElem.NumVariables-1) + 1);
              For k := 1 to pPCElem.NumVariables DO
              Begin
                  Result[k-1] := DSS_CopyStringAsPChar(pPCElem.VariableName(k));
              End;
          End;

         {Else zero-length array null string}
     End
   End;

end;
//------------------------------------------------------------------------------
PROCEDURE CktElement_Get_AllVariableValues(var ResultPtr: PDouble; var ResultCount: Integer);cdecl;
{Return array of doubles with values of all variables if PCElement}
VAR
  Result: PDoubleArray;
   k:Integer;
   pPCElem :TPCElement;

begin

  Result := DSS_CreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);
  IF ActiveCircuit <> Nil THEN
   WITH ActiveCircuit DO
   Begin
     If ActiveCktElement<>Nil THEN
     WITH ActiveCktElement DO
     Begin

         If (DSSObjType And BASECLASSMASK) = PC_ELEMENT Then
          Begin
              pPCElem := (ActiveCktElement as TPCElement);
              Result := DSS_CreateArray_PDouble(ResultPtr, ResultCount, (pPCElem.NumVariables-1) + 1);
              For k := 1 to pPCElem.NumVariables DO
              Begin
                  Result[k-1] := pPCElem.Variable[k];
              End;
          End;

         {Else zero-length array null string}
     End
   End;

end;
//------------------------------------------------------------------------------
function CktElement_Get_Variable(const MyVarName: PAnsiChar;  out Code: Integer):Double;cdecl;
Var
      pPCElem:TPCElement;
      VarIndex :Integer;

begin
  Result := 0.0; Code := 1; // Signifies an error; no value set
  IF ActiveCircuit <> Nil THEN
   WITH ActiveCircuit DO
   Begin
     If ActiveCktElement<>Nil THEN
     WITH ActiveCktElement DO
     Begin

         If (DSSObjType And BASECLASSMASK) = PC_ELEMENT Then
          Begin
              pPCElem := (ActiveCktElement as TPCElement);
              VarIndex := pPCElem.LookupVariable(MyVarName);
              If (VarIndex>0) and (VarIndex <= pPCElem.NumVariables) Then
              Begin
                   Result := pPCElem.Variable[VarIndex];
                   Code := 0;  // Signify result is OK.
              End;
          End;

         {Else zero-length array null string}
     End
   End;

end;
//------------------------------------------------------------------------------
function CktElement_Get_Variablei(Idx: Integer;  out Code: Integer):Double;cdecl;
{Get Value of a variable by index}
Var
      pPCElem:TPCElement;

begin
  Result := 0.0; Code := 1; // Signifies an error; no value set
  IF ActiveCircuit <> Nil THEN
   WITH ActiveCircuit DO
   Begin
     If ActiveCktElement<>Nil THEN
     WITH ActiveCktElement DO
     Begin

         If (DSSObjType And BASECLASSMASK) = PC_ELEMENT Then
          Begin
              pPCElem := (ActiveCktElement as TPCElement);
              If (Idx>0) and (Idx <= pPCElem.NumVariables) Then
              Begin
                   Result := pPCElem.Variable[Idx];
                   Code := 0;  // Signify result is OK.
              End;
          End;

         {Else zero-length array null string}
     End
   End;

end;
//------------------------------------------------------------------------------
PROCEDURE CktElement_Get_NodeOrder(var ResultPtr: PInteger; var ResultCount: Integer);cdecl;
VAR
  Result: PIntegerArray;
   k : Integer;
   i : Integer;
   j : Integer;
begin

      Result := DSS_CreateArray_PInteger(ResultPtr, ResultCount, (0) + 1);
      If ActiveCircuit <> Nil Then With ActiveCircuit Do
      Begin

         If ActiveCktElement<>Nil THEN
         WITH ActiveCktElement DO
         Begin
              k := 0;
              Result := DSS_CreateArray_PInteger(ResultPtr, ResultCount, (NTerms*Nconds-1) + 1);

              for i := 1 to Nterms do
              Begin
                  for j := (i-1)*NConds+1 to i*Nconds do
                  Begin
                       Result[k] := GetNodeNum(NodeRef^[j]);
                       inc(k);
                  End;
              End;
         End
      End;


end;
//------------------------------------------------------------------------------
function CktElement_Get_HasOCPDevice():WordBool;cdecl;
// Check for presence of a fuse, recloser, etc.
begin
  Result := FALSE;
  If ActiveCircuit <> Nil Then begin
    Result := ActiveCircuit.ActiveCktElement.HasOCPDevice;
  end;
end;
//------------------------------------------------------------------------------
function CktElement_Get_NumControls():Integer;cdecl;
begin
  Result := 0;
  If ActiveCircuit <> Nil Then begin
    Result := ActiveCircuit.ActiveCktElement.ControlElementList.listSize;
  end;
end;
//------------------------------------------------------------------------------
function CktElement_Get_OCPDevIndex():Integer;cdecl;
Var
   iControl : integer;
   pCktElement : TDSSCktElement;

begin
     Result := 0;
     If ActiveCircuit <> Nil Then  With ActiveCircuit Do
     Begin
         iControl := 1;
         Repeat
           // cycle through the list of controls until we find a fuse, recloser, or relay
              pCktElement :=  ActiveCktElement.ControlElementList.Get(iControl);
              If pCktElement <> Nil Then
              Case (pCktElement.DSSObjType and CLASSMASK) of

                  FUSE_CONTROL     : Result := iControl;
                  RECLOSER_CONTROL : Result := iControl;
                  RELAY_CONTROL    : Result := iControl;

              End;
              inc(iControl);
         Until (iControl > ActiveCktElement.ControlElementList.listSize) or (Result > 0);
     End;
end;
//------------------------------------------------------------------------------
function CktElement_Get_OCPDevType():Integer;cdecl;
begin
     Result := 0;
     If ActiveCircuit <> Nil Then  With ActiveCircuit Do
         Result := GetOCPDeviceType(ActiveCktElement);     // see Utilities.pas
end;
//------------------------------------------------------------------------------
PROCEDURE CktElement_Get_CurrentsMagAng(var ResultPtr: PDouble; var ResultCount: Integer);cdecl;
// return currents in magnitude, angle array
VAR
  Result: PDoubleArray;
  cBuffer: pComplexArray;
  CMagAng: polar;
  NValues, iV ,i: Integer;

Begin

  If ActiveCircuit <> Nil Then
     WITH ActiveCircuit.ActiveCktElement DO
     Begin
         NValues := NConds*NTerms;
         Result := DSS_CreateArray_PDouble(ResultPtr, ResultCount, (2*NValues-1) + 1);
         cBuffer := Allocmem(sizeof(cBuffer^[1])*NValues);
         GetCurrents(cBuffer);
         iV :=0;
         For i := 1 to  NValues DO
         Begin
            CMagAng := ctopolardeg(cBuffer^[i]); // convert to mag/angle
            Result[iV] := CMagAng.mag ;
            Inc(iV);
            Result[iV] := CMagAng.ang ;
            Inc(iV);
         End;
         Reallocmem(cBuffer,0);
     End
  Else
     Result := DSS_CreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);

end;
//------------------------------------------------------------------------------
PROCEDURE CktElement_Get_VoltagesMagAng(var ResultPtr: PDouble; var ResultCount: Integer);cdecl;
// Bus Voltages in magnitude, angle at all terminal
VAR
  Result: PDoubleArray;
  numcond, i,n,iV:Integer;
  Volts:Polar;

Begin

// Return voltages for all terminals

     IF ActiveCircuit <> Nil THEN
      WITH ActiveCircuit DO
      Begin
        If ActiveCktElement<>Nil THEN
        WITH ActiveCktElement DO
        Begin
         numcond := NConds*Nterms;
         Result := DSS_CreateArray_PDouble(ResultPtr, ResultCount, (2*numcond-1) + 1);
         // k := (Terminal-1)*numcond;    // RCD 8-30-00 Changed
         iV :=0;
         FOR i := 1 to  numcond DO
         Begin
            n := ActiveCktElement.NodeRef^[i];
            Volts := ctopolardeg(Solution.NodeV^[n]); // ok if =0
            Result[iV] := Volts.mag;
            Inc(iV);
            Result[iV] := Volts.ang;
            Inc(iV);
         End;
        End;
      End
    ELSE Result := DSS_CreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);

end;
//------------------------------------------------------------------------------
END.
